--- a/oncoFinder2/templates/website/lrl_report.html
+++ b/oncoFinder2/templates/website/lrl_report.html
@@ -60,7 +60,9 @@
             <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#p_mh">Metformin hydrochloride</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#p_ca">Capryloylsalicylic acid</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#p_re">Resveratrol</a></li>
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#path_analysis">Pathway level analysis</a></li>
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#side_eff">Side effects</a></li>
+            
+            
             
           </ul>
           
@@ -454,6 +456,82 @@
   </div>
 {%endfor%}
 
+<!-- ------------------------ SIDE EFFECTS  -->
+<hr/>
+          <h2 id='side_eff'>Side effects</h2>
+<hr/>
+
+<ul class="nav nav-tabs" role="tablist">
+  <li role="presentation" class="active"><a href="#s_ra_tab" aria-controls="home1" role="tab" data-toggle="tab">Retinoic acid</a>
+  </li>
+  <li role="presentation" class=""><a href="#s_mh_tab" aria-controls="home1" role="tab" data-toggle="tab">Metformin hydrochloride</a>
+  </li>
+  <li role="presentation" class=""><a href="#s_ca_tab" aria-controls="home1" role="tab" data-toggle="tab">Capryloylsalicylic acid</a>
+  </li>
+  <li role="presentation" class=""><a href="#s_re_tab" aria-controls="home1" role="tab" data-toggle="tab">Resveratrol</a>
+  </li>       
+</ul>
+            <!-- Side eff Tab panes -->
+  <div class="tab-content">
+    <div role="tabpanel" class="tab-pane fade in active" id="s_ra_tab">
+    
+    <h4>Retinoic acid side effects</h4>
+      <table id="tbl-s-ra" class="path table table-striped table-bordered" cellspacing="0" width="100%">
+        <thead>
+          <tr>
+           <th>Side effect</th>
+           <th>ROR</th>
+          </tr>
+        </thead>  
+      </table> 
+    
+    </div>
+    
+    <div role="tabpanel" class="tab-pane fade " id="s_mh_tab">
+    
+    <h4>Metformin hydrochloride side effects</h4>
+      <table id="tbl-s-mh" class="path table table-striped table-bordered" cellspacing="0" width="100%">
+        <thead>
+          <tr>
+           <th>Side effect</th>
+           <th>ROR</th>
+          </tr>
+        </thead>  
+      </table> 
+    
+    </div>
+    
+    <div role="tabpanel" class="tab-pane fade " id="s_ca_tab">
+    
+    <h4>Capryloylsalicylic acid side effects</h4>
+      <table id="tbl-s-ca" class="path table table-striped table-bordered" cellspacing="0" width="100%">
+        <thead>
+          <tr>
+           <th>Side effect</th>
+           <th>ROR</th>
+          </tr>
+        </thead>  
+      </table> 
+    
+    </div>
+    
+    <div role="tabpanel" class="tab-pane fade " id="s_re_tab">
+    
+    <h4>Resveratrol side effects</h4>
+      <table id="tbl-s-re" class="path table table-striped table-bordered" cellspacing="0" width="100%">
+        <thead>
+          <tr>
+           <th>Side effect</th>
+           <th>ROR</th>
+          </tr>
+        </thead>  
+      </table> 
+    
+    </div>
+  
+  </div>
+
+
 </div>  
 
 
@@ -474,11 +552,9 @@
           <ul class="list-unstyled" >
             <li class="title">Table of contents: </li> 
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#input_data">Input data</a></li>
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#ra">Retinoic acid</a></li>
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#mh">Metformin hydrochloride</a></li>
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#ca">Capryloylsalicylic acid</a></li>
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#re">Resveratrol</a></li>
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#gene_analysis">Gene level analysis</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#path_analysis">Pathway level analysis</a></li>
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#side_eff">Side Effects</a></li>
           </ul>
         </div>
         <div class="bottom">
