--- a/oncoFinder2/templates/website/lrl_report.html
+++ b/oncoFinder2/templates/website/lrl_report.html
@@ -37,7 +37,7 @@
          <span class='pull-right' style='font-size:11pt; margin:15px;'>Access Level: Z-II, <br/>Confidential </span>
          </div><br style="clear:both;"/>
           <div class='text-center'>
-            <h1>LRL 2016</h1>
+            <h1>Pathway analysis and drug scoring for compounds with possible geroprotective activity</h1>
           </div>
           
           
