--- a/oncoFinder2/templates/website/lrl_report.html
+++ b/oncoFinder2/templates/website/lrl_report.html
@@ -74,10 +74,10 @@
 
 <ul class="nav nav-tabs" role="tablist">
          <li role="presentation" class="active"><a href="#ra_all_tab" aria-controls="home1" role="tab" data-toggle="tab">Combined</a></li>
-         <li role="presentation" class=""><a href="#ra_24_01_tab" aria-controls="home1" role="tab" data-toggle="tab">24h 0.1 micromol</a></li>
-         <li role="presentation" ><a href="#ra_24_1_tab" aria-controls="home" role="tab" data-toggle="tab">24h 1 micromol</a></li>
-         <li role="presentation"><a href="#ra_48_01_tab" aria-controls="profile" role="tab" data-toggle="tab">48h 0.1 micromol</a></li>
-         <li role="presentation"><a href="#ra_48_1_tab" aria-controls="messages" role="tab" data-toggle="tab">48h 1 micromol</a></li>
+         <li role="presentation" class=""><a href="#ra_24_01_tab" aria-controls="home1" role="tab" data-toggle="tab">24h 0.1 µM</a></li>
+         <li role="presentation" ><a href="#ra_24_1_tab" aria-controls="home" role="tab" data-toggle="tab">24h 1 µM</a></li>
+         <li role="presentation"><a href="#ra_48_01_tab" aria-controls="profile" role="tab" data-toggle="tab">48h 0.1 µM</a></li>
+         <li role="presentation"><a href="#ra_48_1_tab" aria-controls="messages" role="tab" data-toggle="tab">48h 1 µM</a></li>
          
          </ul>
             <!-- GENE Tab panes -->
@@ -92,7 +92,7 @@
           <div id="ra_24_01_scatter" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
-  <h4>Table 1. Retinoic acid. 24h 0.1 micromol</h4>
+  <h4>Table 1. Retinoic acid. 24h 0.1 µM</h4>
       <table id="tbl-ra_24_01" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -109,7 +109,7 @@
           <div id="ra_24_1_scatter" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
-  <h4>Table 2. Retinoic acid. 24h 1 micromol</h4>
+  <h4>Table 2. Retinoic acid. 24h 1 µM</h4>
       <table id="tbl-ra_24_1" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -126,7 +126,7 @@
           <div id="ra_48_01_scatter" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
-  <h4>Table 3. Retinoic acid. 48h 0.1 micromol</h4>
+  <h4>Table 3. Retinoic acid. 48h 0.1 µM</h4>
       <table id="tbl-ra_48_01" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -143,7 +143,7 @@
           <div id="ra_48_1_scatter" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
-  <h4>Table 4. Retinoic acid. 48h 1 micromol</h4>
+  <h4>Table 4. Retinoic acid. 48h 1 µM</h4>
       <table id="tbl-ra_48_1" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -162,10 +162,10 @@
 
 <ul class="nav nav-tabs" role="tablist">
          <li role="presentation" class="active"><a href="#mh_all_tab" aria-controls="home1" role="tab" data-toggle="tab">Combined</a></li>
-         <li role="presentation"><a href="#mh_24_2_tab" aria-controls="home1" role="tab" data-toggle="tab">24h 2 micromol</a></li>
-         <li role="presentation" ><a href="#mh_24_4_tab" aria-controls="home" role="tab" data-toggle="tab">24h 4 micromol</a></li>
-         <li role="presentation"><a href="#mh_48_2_tab" aria-controls="profile" role="tab" data-toggle="tab">48h 2 micromol</a></li>
-         <li role="presentation"><a href="#mh_48_4_tab" aria-controls="messages" role="tab" data-toggle="tab">48h 4 micromol</a></li>
+         <li role="presentation"><a href="#mh_24_2_tab" aria-controls="home1" role="tab" data-toggle="tab">24h 2 mM</a></li>
+         <li role="presentation" ><a href="#mh_24_4_tab" aria-controls="home" role="tab" data-toggle="tab">24h 4 mM</a></li>
+         <li role="presentation"><a href="#mh_48_2_tab" aria-controls="profile" role="tab" data-toggle="tab">48h 2 mM</a></li>
+         <li role="presentation"><a href="#mh_48_4_tab" aria-controls="messages" role="tab" data-toggle="tab">48h 4 mM</a></li>
          
          </ul>
             <!-- GENE Tab panes -->
@@ -181,7 +181,7 @@
           <div id="mh_24_2_scatter" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
-  <h4>Table 5. Metformin hydrochloride. 24h 2 micromol</h4>
+  <h4>Table 5. Metformin hydrochloride. 24h 2 mM</h4>
       <table id="tbl-mh_24_2" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -198,7 +198,7 @@
           <div id="mh_24_4_scatter" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
-  <h4>Table 6. Metformin hydrochloride. 24h 4 micromol</h4>
+  <h4>Table 6. Metformin hydrochloride. 24h 4 mM</h4>
       <table id="tbl-mh_24_4" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -215,7 +215,7 @@
           <div id="mh_48_2_scatter" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
-  <h4>Table 7. Metformin hydrochloride. 48h 2 micromol</h4>
+  <h4>Table 7. Metformin hydrochloride. 48h 2 mM</h4>
       <table id="tbl-mh_48_2" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -232,7 +232,7 @@
           <div id="mh_48_4_scatter" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
-  <h4>Table 8. Metformin hydrochloride. 48h 4 micromol</h4>
+  <h4>Table 8. Metformin hydrochloride. 48h 4 mM</h4>
       <table id="tbl-mh_48_4" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -247,14 +247,14 @@
 
 
 <hr/> <!--  ---------------------------------  Metformin hydrochloride -->
-<h3 id='ca'>Capryloylsalicylic acid</h3>
+<h3 id='ca'>Capryloyl salicylic acid</h3>
 
 <ul class="nav nav-tabs" role="tablist">
          <li role="presentation" class="active"><a href="#ca_all_tab" aria-controls="home1" role="tab" data-toggle="tab">Combined</a></li>
-         <li role="presentation" ><a href="#ca_24_5_tab" aria-controls="home1" role="tab" data-toggle="tab">24h 5 micromol</a></li>
-         <li role="presentation" ><a href="#ca_24_10_tab" aria-controls="home" role="tab" data-toggle="tab">24h 10 micromol</a></li>
-         <li role="presentation"><a href="#ca_48_5_tab" aria-controls="profile" role="tab" data-toggle="tab">48h 5 micromol</a></li>
-         <li role="presentation"><a href="#ca_48_10_tab" aria-controls="messages" role="tab" data-toggle="tab">48h 10 micromol</a></li>
+         <li role="presentation" ><a href="#ca_24_5_tab" aria-controls="home1" role="tab" data-toggle="tab">24h 5 µM</a></li>
+         <li role="presentation" ><a href="#ca_24_10_tab" aria-controls="home" role="tab" data-toggle="tab">24h 10 µM</a></li>
+         <li role="presentation"><a href="#ca_48_5_tab" aria-controls="profile" role="tab" data-toggle="tab">48h 5 µM</a></li>
+         <li role="presentation"><a href="#ca_48_10_tab" aria-controls="messages" role="tab" data-toggle="tab">48h 10 µM</a></li>
          
          </ul>
             <!-- GENE Tab panes -->
@@ -269,7 +269,7 @@
           <div id="ca_24_5_scatter" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
-  <h4>Table 9. Capryloylsalicylic acid. 24h 5 micromol</h4>
+  <h4>Table 9. Capryloyl salicylic acid. 24h 5 µM</h4>
       <table id="tbl-ca_24_5" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -286,7 +286,7 @@
           <div id="ca_24_10_scatter" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
-  <h4>Table 10. Capryloylsalicylic acid. 24h 10 micromol</h4>
+  <h4>Table 10. Capryloyl salicylic acid. 24h 10 µM</h4>
       <table id="tbl-ca_24_10" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -303,7 +303,7 @@
           <div id="ca_48_5_scatter" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
-  <h4>Table 11. Capryloylsalicylic acid. 48h 5 micromol</h4>
+  <h4>Table 11. Capryloyl salicylic acid. 48h 5 µM</h4>
       <table id="tbl-ca_48_5" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -320,7 +320,7 @@
           <div id="ca_48_10_scatter" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
-  <h4>Table 12. Capryloylsalicylic acid. 48h 10 micromol</h4>
+  <h4>Table 12. Capryloyl salicylic acid. 48h 10 µM</h4>
       <table id="tbl-ca_48_10" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -338,10 +338,10 @@
 
 <ul class="nav nav-tabs" role="tablist">
          <li role="presentation" class="active"><a href="#re_all_tab" aria-controls="home1" role="tab" data-toggle="tab">Combined</a></li>
-         <li role="presentation" ><a href="#re_24_10_tab" aria-controls="home1" role="tab" data-toggle="tab">24h 10 nmol</a></li>
-         <li role="presentation" ><a href="#re_24_50_tab" aria-controls="home" role="tab" data-toggle="tab">24h 50 micromol</a></li>
-         <li role="presentation"><a href="#re_48_10_tab" aria-controls="profile" role="tab" data-toggle="tab">48h 10 nmol</a></li>
-         <li role="presentation"><a href="#re_48_50_tab" aria-controls="messages" role="tab" data-toggle="tab">48h 50 micromol</a></li>
+         <li role="presentation" ><a href="#re_24_10_tab" aria-controls="home1" role="tab" data-toggle="tab">24h 10 µM</a></li>
+         <li role="presentation" ><a href="#re_24_50_tab" aria-controls="home" role="tab" data-toggle="tab">24h 50 µM</a></li>
+         <li role="presentation"><a href="#re_48_10_tab" aria-controls="profile" role="tab" data-toggle="tab">48h 10 µM</a></li>
+         <li role="presentation"><a href="#re_48_50_tab" aria-controls="messages" role="tab" data-toggle="tab">48h 50 µM</a></li>
          
          </ul>
             <!-- GENE Tab panes -->
@@ -356,7 +356,7 @@
           <div id="re_24_10_scatter" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
-  <h4>Table 13. Resveratrol. 24h 10 nmol</h4>
+  <h4>Table 13. Resveratrol. 24h 10 µM</h4>
       <table id="tbl-re_24_10" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -373,7 +373,7 @@
           <div id="re_24_50_scatter" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
-  <h4>Table 14. Resveratrol. 24h 50 micromol</h4>
+  <h4>Table 14. Resveratrol. 24h 50 µM</h4>
       <table id="tbl-re_24_50" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -390,7 +390,7 @@
           <div id="re_48_10_scatter" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
-  <h4>Table 15. Resveratrol acid. 48h 10 nmol</h4>
+  <h4>Table 15. Resveratrol acid. 48h 10 µM</h4>
       <table id="tbl-re_48_10" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -407,7 +407,7 @@
           <div id="re_48_50_scatter" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
-  <h4>Table 16. Resveratrol. 48h 50 micromol</h4>
+  <h4>Table 16. Resveratrol. 48h 50 µM</h4>
       <table id="tbl-re_48_50" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -503,7 +503,7 @@
     
     <div role="tabpanel" class="tab-pane fade " id="s_ca_tab">
     
-    <h4>Capryloylsalicylic acid side effects</h4>
+    <h4>Capryloyl salicylic acid side effects</h4>
       <table id="tbl-s-ca" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
