--- a/oncoFinder2/templates/website/lrl_report.html
+++ b/oncoFinder2/templates/website/lrl_report.html
@@ -61,6 +61,7 @@
             <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#p_mh">Metformin hydrochloride</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#p_ca">Capryloylsalicylic acid</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#p_re">Resveratrol</a></li>
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#gero-score">Geroprotective score for skin</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#side_eff">Side effects</a></li>
             
             
@@ -478,7 +479,29 @@
   {%endfor%}
   </div>
 {%endfor%}
+<hr/>
 
+<h2 id='gero-score'>Geroprotective score for skin</h2>
+<table class="table table-striped table-bordered">
+<tr class="tableizer-firstrow"><th> </th><th>26-40 y.o.</th><th>41-50 y.o.</th><th>51-65 y.o.</th><th>66-76 y.o.</th><th>77-86 y.o.</th></tr>
+ <tr><td>24h 0.1 µM Retinoic acid</td><td>-36</td><td>-0.8721804511</td><td>0</td><td>0</td><td>-38.8197596796</td></tr>
+ <tr><td>24h 1 µM Retinoic acid</td><td>-34.3658210948</td><td>1.4353172651</td><td>-20.6151359708</td><td>0</td><td>-34.8668399972</td></tr>
+ <tr><td>48h 0.1µM Retinoic acid</td><td>0</td><td>-28.4762841684</td><td>-78.6938373972</td><td>-23.0035837257</td><td>-48.477689551</td></tr>
+ <tr><td>48h 1 µM Retinoic acid</td><td>-13.9131473544</td><td>0</td><td>-90.9000070269</td><td>-29.7582741901</td><td>-55.0513667346</td></tr>
+ <tr><td>24h 2 mM Metformin hydrochloride</td><td>-54.6744431171</td><td>-34.9132176235</td><td>-18.6622162884</td><td>0</td><td>-20.0074485279</td></tr>
+ <tr><td>24h 4 mM Metformin hydrochloride</td><td>-14.4748787857</td><td>22.5511910618</td><td>-24.8468835641</td><td>0</td><td>-23.7342421474</td></tr>
+ <tr><td>48h 2 µM Metformin hydrochloride</td><td>0</td><td>30.377766847</td><td>-24.3912585201</td><td>-2.5913850046</td><td>0</td></tr>
+ <tr><td>48h  4 µM Metformin hydrochloride</td><td>0</td><td>0</td><td>-28.7088749912</td><td>21.6889888272</td><td>0</td></tr>
+ <tr><td>24h 10 µM Capryloylsalicylic acid</td><td>0</td><td>26.6832970276</td><td>28.566369194</td><td>57.7591174197</td><td>-21.5398777317</td></tr>
+ <tr><td>24h 5 µM Capryloylsalicylic acid</td><td>30.6660108214</td><td>-23.3722155857</td><td>-25.637270747</td><td>0</td><td>0</td></tr>
+ <tr><td>48h 10 µM Capryloylsalicylic acid</td><td>35.2056777458</td><td>0</td><td>13.290141241</td><td>56.9111095496</td><td>-23.1317546202</td></tr>
+ <tr><td>48h 5 µM Capryloylsalicylic acid</td><td>38.5943363081</td><td>23.1096901131</td><td>46</td><td>65.302508608</td><td>34.7462581688</td></tr>
+ <tr><td>24h 10 µM Resveratrol</td><td>-11.0980254374</td><td>0</td><td>42</td><td>21.7023399621</td><td>0</td></tr>
+ <tr><td>24h 50 µM Resveratrol</td><td>0</td><td>28.234277282</td><td>26.0380858689</td><td>62.3302649146</td><td>13.9218607266</td></tr>
+ <tr><td>48h 10 µM Resveratrol</td><td>22.3507835008</td><td>25.1890942309</td><td>79.0276157684</td><td>34.0258590401</td><td>17.7270746961</td></tr>
+ <tr><td>48h 50 µM Resveratrol</td><td>0</td><td>-28.5129646546</td><td>40</td><td>64.2302016724</td><td>10.3528915747</td></tr>
+</table>
+					
 <!-- ------------------------ SIDE EFFECTS  -->
 <hr/>
           <h2 id='side_eff'>Side effects</h2>
@@ -577,6 +600,7 @@
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#input_data">Input data</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#gene_analysis">Gene level analysis</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#path_analysis">Pathway level analysis</a></li>
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#gero-score">Geroprotective score for skin</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#side_eff">Side Effects</a></li>
           </ul>
         </div>
