--- a/oncoFinder2/templates/website/lrl_report.html
+++ b/oncoFinder2/templates/website/lrl_report.html
@@ -482,7 +482,7 @@
 <hr/>
 
 <h2 id='gero-score'>Geroprotective score for skin</h2>
-<table class="table table-striped table-bordered">
+<table class="table table-striped table-bordered" id='tbl-gero'>
 <tr class="tableizer-firstrow"><th> </th><th>26-40 y.o.</th><th>41-50 y.o.</th><th>51-65 y.o.</th><th>66-76 y.o.</th><th>77-86 y.o.</th></tr>
  <tr><td>24h 0.1 µM Retinoic acid</td><td>-36</td><td>-0.8721804511</td><td>0</td><td>0</td><td>-38.8197596796</td></tr>
  <tr><td>24h 1 µM Retinoic acid</td><td>-34.3658210948</td><td>1.4353172651</td><td>-20.6151359708</td><td>0</td><td>-34.8668399972</td></tr>
