--- a/oncoFinder2/templates/website/lrl_report.html
+++ b/oncoFinder2/templates/website/lrl_report.html
@@ -501,6 +501,33 @@
  <tr><td>48h 10 µM Resveratrol</td><td>22.3507835008</td><td>25.1890942309</td><td>79.0276157684</td><td>34.0258590401</td><td>17.7270746961</td></tr>
  <tr><td>48h 50 µM Resveratrol</td><td>0</td><td>-28.5129646546</td><td>40</td><td>64.2302016724</td><td>10.3528915747</td></tr>
 </table>
+
+<hr/>
+<h2 id='similarity'>Similarity scores with other compounds</h2>
+<table id='tbl-similarity' class="table table-striped table-bordered" width="100%">
+  <thead>
+    <tr>
+      <th></th>
+      <th>lFC Tumour_24h_01micromol_Retinoic_acid</th>
+      <th>lFC Tumour_48h_1micromol_Retinoic_acid</th>
+      <th>lFC Tumour_48h_01micromol_Retinoic_acid</th>
+      <th>lFC Tumour_24h_1micromol_Retinoic_acid</th>
+      <th>lFC Tumour_48h_2millimol_Metformin_hydrochloride</th>
+      <th>lFC Tumour_48h_4millimol_Metformin_hydrochloride</th>
+      <th>lFC Tumour_24h_2millimol_Metformin_hydrochloride</th>
+      <th>lFC Tumour_24h_4millimol_Metformin_hydrochloride</th>
+      <th>lFC Tumour_48h_10nmol_resveratrol</th>
+      <th>lFC Tumour_48h_50micromol_resveratrol</th>
+      <th>lFC Tumour_24h_10nmol_resveratrol</th>
+      <th>lFC Tumour_24h_50micromol_resveratrol</th>
+      <th>lFC Tumour_24h_10micromol_Capryloylsalicylic_acid,y</th>
+      <th>lFC Tumour_24h_5micromol_Capryloylsalicylic_acid</th>
+      <th>lFC Tumour_48h_10micromol_Capryloylsalicylic_acid</th>
+      <th>lFC Tumour_48h_5micromol_Capryloylsalicylic_acid</th>
+    </tr>
+  </thead>
+
+</table>
 					
 <!-- ------------------------ SIDE EFFECTS  -->
 <hr/>
