add reactome db

--- a/oncoFinder2/templates/database/pathway_list.html
+++ b/oncoFinder2/templates/database/pathway_list.html
@@ -7,14 +7,15 @@
     <h1> <img src='/static/images/laboratory_info.png' style="width: 100px;"/>Biochem DataBase </h1> 
     <div class="pull-left">
     <span style="font-size:14px; ">Human:</span> <div class="btn-group btn-group-xs"> 
-        <button type="button" class="btn btn-primary human primary_old" onClick="location.href='/db/pathways/human/primary_old/'" >Primary old</button>
-        <button type="button" class="btn btn-primary human primary_new"   onClick="location.href='/db/pathways/human/primary_new/'">Primary new</button>
+        <button type="button" class="btn btn-primary human primary_old" onClick="location.href='/db/pathways/human/primary_old/'" >Pr. old</button>
+        <button type="button" class="btn btn-primary human primary_new"   onClick="location.href='/db/pathways/human/primary_new/'">Pr. new</button>
         <button type="button" class="btn btn-primary human metabolism"  onClick="location.href='/db/pathways/human/metabolism/'" >Metabolism</button>
         <button type="button" class="btn btn-primary human cytoskeleton"   onClick="location.href='/db/pathways/human/cytoskeleton/'">Cytoskeleton</button>
         <button type="button" class="btn btn-primary human kegg"   onClick="location.href='/db/pathways/human/kegg/'">KEGG</button>
         <button type="button" class="btn btn-primary human kegg_adjusted"   onClick="location.href='/db/pathways/human/kegg_adjusted/'">KEGG adj</button>
         <button type="button" class="btn btn-primary human nci"   onClick="location.href='/db/pathways/human/nci/'">NCI</button>
         <button type="button" class="btn btn-primary human biocarta"   onClick="location.href='/db/pathways/human/biocarta/'">Biocarta</button>
+        <button type="button" class="btn btn-primary human reactome"   onClick="location.href='/db/pathways/human/reactome/'">Reactome</button>
     </div>
     
     <span style="font-size:14px; margin-left:10px;">Mouse: </span><div class="btn-group btn-group-xs">
