--- a/oncoFinder2/templates/website/demo-report.html
+++ b/oncoFinder2/templates/website/demo-report.html
@@ -558,6 +558,15 @@ PMC3824660.
         </div>
       </div>
     </div>
+    <script src="https://cdn.datatables.net/buttons/1.1.0/js/dataTables.buttons.min.js" type="text/javascript"></script>
+    <script src="https://cdn.datatables.net/buttons/1.1.0/js/buttons.bootstrap.min.js" type="text/javascript"></script>
+    <script src="//cdn.datatables.net/buttons/1.1.0/js/buttons.flash.min.js" type="text/javascript"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.min.js" type="text/javascript"></script>
+    <script src="//cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/pdfmake.min.js" type="text/javascript"></script>
+    <script src="//cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/vfs_fonts.js" type="text/javascript"></script>
+    <script src="//cdn.datatables.net/buttons/1.1.0/js/buttons.html5.min.js" type="text/javascript"></script>
+    <script src="//cdn.datatables.net/buttons/1.1.0/js/buttons.print.min.js" type="text/javascript"></script>
+    
     <script src="/static/report/demo/js/scatter.js" type="text/javascript"></script>
     <script src="/static/report/demo/js/scatter2.js" type="text/javascript"></script>
      <script src="/static/report/demo/js/scatter3.js" type="text/javascript"></script>
