--- a/oncoFinder2/templates/website/lrl_report.html
+++ b/oncoFinder2/templates/website/lrl_report.html
@@ -483,7 +483,25 @@
 <hr/>
 
 <h2 id='gero-score'>Geroprotective score for skin</h2>
+
 <table class="table table-striped table-bordered" id='tbl-gero'>
+<thead><tr class="tableizer-firstrow"><th>Drug</th><th>25-31 y.o</th><th>33-39 y.o</th><th>40-44 y.o.</th><th>45-50 y.o</th><th>50-52 y.o</th><th>53-55 y.o</th><th>56-60 y.o</th><th>61-65 y.o</th><th>66-70 y.o.</th></tr></thead><tbody>
+ <tr><td>Supplement NC 6h 0.0137um</td><td>1328</td><td>305</td><td>309</td><td>228</td><td>165</td><td>545</td><td>2204</td><td>593</td><td>2421</td></tr>
+ <tr><td>Supplement EA 24h 10um</td><td>1289</td><td>491</td><td>301</td><td>181</td><td>152</td><td>560</td><td>2225</td><td>742</td><td>2526</td></tr>
+ <tr><td>Supplement EG 6h 88.8um</td><td>924</td><td>207</td><td>210</td><td>172</td><td>124</td><td>289</td><td>1690</td><td>745</td><td>1957</td></tr>
+ <tr><td>Supplement QU 24h 10um</td><td>731</td><td>240</td><td>332</td><td>87</td><td>354</td><td>115</td><td>1690</td><td>860</td><td>1863</td></tr>
+ <tr><td>Supplement CU 6h 0.0015um</td><td>627</td><td>135</td><td>146</td><td>114</td><td>83</td><td>191</td><td>1105</td><td>461</td><td>1337</td></tr>
+ <tr><td>Metformin dehydrochloride 24h 4mM</td><td>610</td><td>169</td><td>292</td><td>131</td><td>171</td><td>125</td><td>1100</td><td>555</td><td>1344</td></tr>
+ <tr><td>Supplement CA 24h 10um</td><td>426</td><td>23</td><td>23</td><td>10</td><td>38</td><td>29</td><td>11</td><td>13</td><td>17</td></tr>
+ <tr><td>Capryolyl Salicilic Acid 48h 10um</td><td>89</td><td>16</td><td>162</td><td>68</td><td>297</td><td>1312</td><td>4190</td><td>5980</td><td>1611</td></tr>
+ <tr><td>Supplement SS 24h 10um</td><td>26</td><td>11</td><td>62</td><td>63</td><td>169</td><td>0</td><td>1822</td><td>1504</td><td>39</td></tr>
+ <tr><td>Supplement A 6h 10um</td><td>25</td><td>11</td><td>89</td><td>10</td><td>15</td><td>0</td><td>5156</td><td>423</td><td>37</td></tr>
+ <tr><td>Resveratrol 48h 10um</td><td>17</td><td>28</td><td>73</td><td>79</td><td>254</td><td>139</td><td>4639</td><td>1465</td><td>455</td></tr>
+ <tr><td>Supplement ME 6h 0.3704um</td><td>16</td><td>2</td><td>56</td><td>2</td><td>20</td><td>99</td><td>430</td><td>443</td><td>555</td></tr>
+ <tr><td>Retinoic acid 24h 1 um</td><td>17</td><td>40</td><td>215</td><td>199</td><td>228</td><td>361</td><td>1414</td><td>1149</td><td>1203</td></tr>
+</tbody></table>
+
+<!-- OLD TABLE <table class="table table-striped table-bordered" id='tbl-gero'>
 <tr class="tableizer-firstrow"><th> </th><th>26-40 y.o.</th><th>41-50 y.o.</th><th>51-65 y.o.</th><th>66-76 y.o.</th><th>77-86 y.o.</th></tr>
  <tr><td>24h 0.1 µM Retinoic acid</td><td>-36</td><td>-0.8721804511</td><td>0</td><td>0</td><td>-38.8197596796</td></tr>
  <tr><td>24h 1 µM Retinoic acid</td><td>-34.3658210948</td><td>1.4353172651</td><td>-20.6151359708</td><td>0</td><td>-34.8668399972</td></tr>
@@ -501,7 +519,7 @@
  <tr><td>24h 50 µM Resveratrol</td><td>0</td><td>28.234277282</td><td>26.0380858689</td><td>62.3302649146</td><td>13.9218607266</td></tr>
  <tr><td>48h 10 µM Resveratrol</td><td>22.3507835008</td><td>25.1890942309</td><td>79.0276157684</td><td>34.0258590401</td><td>17.7270746961</td></tr>
  <tr><td>48h 50 µM Resveratrol</td><td>0</td><td>-28.5129646546</td><td>40</td><td>64.2302016724</td><td>10.3528915747</td></tr>
-</table>
+</table>-->
 
 <hr/>
 <h2 id='similarity'>Similarity scores with other compounds</h2>
