--- a/oncoFinder2/templates/website/lrl_report.html
+++ b/oncoFinder2/templates/website/lrl_report.html
@@ -62,7 +62,7 @@
             <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#p_ca">Capryloylsalicylic acid</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#p_re">Resveratrol</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#gero-score">Geroprotective score for skin</a></li>
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#simalarity">Similarity scores with other compounds</a></li>
+            <!--  <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#simalarity">Similarity scores with other compounds</a></li>-->
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#side_eff">Side effects</a></li>
             
             
@@ -520,7 +520,7 @@
  <tr><td>48h 10 µM Resveratrol</td><td>22.3507835008</td><td>25.1890942309</td><td>79.0276157684</td><td>34.0258590401</td><td>17.7270746961</td></tr>
  <tr><td>48h 50 µM Resveratrol</td><td>0</td><td>-28.5129646546</td><td>40</td><td>64.2302016724</td><td>10.3528915747</td></tr>
 </table>-->
-
+<!--  
 <hr/>
 <h2 id='similarity'>Similarity scores with other compounds</h2>
   <ul class="nav nav-tabs" role="tablist">
@@ -594,7 +594,7 @@
   
   
   </div>
-
+-->
 					
 <!-- ------------------------ SIDE EFFECTS  -->
 <hr/>
@@ -695,7 +695,7 @@
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#gene_analysis">Gene level analysis</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#path_analysis">Pathway level analysis</a></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#gero-score">Geroprotective score for skin</a></li>
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#simalarity">Similarity scores with other compounds</a></li>
+            <!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#simalarity">Similarity scores with other compounds</a></li>-->
             <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#side_eff">Side Effects</a></li>
           </ul>
         </div>
